# posebench

./: focal_estimation.py  homography_decomposition.py  pyproject.toml  relative_pose.py
src/posebench/: __init__.py  absolute_pose.py  homography.py  monodepth_pose.py  monodepth_relative_pose.py  relative_pose.py
src/posebench/utils/: geometry.py  misc.py
