[project]
name = "posebench"
version = "0.0.1"
description = "PoseBench: A Benchmark for Absolute and Relative Pose Estimation"
readme = "README.md"
authors = [
    { name = "Viktor Larsson", email = "viktor.larsson@maths.lth.se" }
]
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.11.0",
    "opencv-python>=4.12.0.88",
    "poselib",
    "pycolmap>=3.12.3",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[project.scripts]
posebench = "posebench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
